# genai_calidade_datos

./: .gitignore  cleaned_dataset.csv  comandos.md  data_anomaly_detection_platform.csv  data_anomaly_detection_platform.py  datos_inconsistentes.csv  deteccion_dupricados.csv  duplicates_report.csv  entity_resolution_system.csv  entity_resolution_system.py  golden_records.csv  limpeza_datos_entrada.csv  limpeza_datos_ia.py  motor_deteccion_dupricados.py  proxectos_calidade_datos.md  pyproject.toml  schema_drift_detection.py  schema_drift_detection1.csv  schema_drift_detection2.csv  schema_drift_report.csv  semantic_data_reduplication.csv  semantic_data_reduplication_platform.py  semantic_deduplicated_dataset.csv  validador_consistencia_datos.py  validated_dataset.csv
